# flyfus_llm_provider

./: .difyignore  .env.example  .gitignore  CHANGELOG.md  README.md  manifest.yaml  pyproject.toml
docs/: agent_context.md  agent_image_context方案.md  local_development.md  release-process.md
models/llm/: MiniMax-M2.7.yaml  _position.yaml  agent_context.py  agent_image_context.py  deepseek-v4-flash.yaml  deepseek-v4-pro.yaml  gemini-2.5-flash.yaml  gemini-2.5-pro.yaml  gemini-3-flash-preview.yaml  gemini-3-pro-image-preview.yaml  gemini-3-pro-preview.yaml  gemini-3.1-flash-image-preview.yaml  gemini-3.1-pro-preview.yaml  gemini-3.5-flash.yaml  gemini-3.6-flash.yaml  geo_prompt.py  glm-5.1.yaml  glm-5.2.yaml  glm-5.yaml  gpt-5.4-mini.yaml  gpt-5.4.yaml  gpt-5.5.yaml  gpt-5.6-luna.yaml  gpt-5.6-sol.yaml  gpt-5.6-terra.yaml  grok-4.5.yaml  high.yaml  invocation_logging.py  kimi-k2.5.yaml  kimi-k2.7-code.yaml  llm.py  low.yaml  medium.yaml  minimax-m2.5.yaml  model_catalog.py  parameter_conversion.py  prompt_preprocessing.py  qwen3-coder-next.yaml  qwen3-max.yaml  qwen3-vl-flash.yaml  (+10 more)
models/llm/native/: base.py  gemini.py  openai_responses.py
provider/: flyfus_llm_provider.py  flyfus_llm_provider.yaml  flypower_llm_provider.py  flypower_llm_provider.yaml
tests/: test_agent_context_protocol.py  test_gemini_web_search.py  test_geo_prompt_render.py  test_invocation_logging.py  test_openai_responses_request.py  test_reasoning_effort.py  test_usage_reporting.py
workflow_tools/: read_files.py
