[project]
name = "flypower-llm-provider"
version = "0.1.0"
description = "Minimal Dify LLM provider plugin for OpenAI-compatible endpoints."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aliyun-log-python-sdk>=0.9.48",
    "dify_plugin>=0.9.0",
    "openai>=2.38.0",
    "pyyaml>=6.0.2",
    "requests>=2.34.2",
    "httpx>=0.28.1",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
